--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="hand second-hand"></div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
